--- a/client/public/hi.html
+++ b/client/public/hi.html
@@ -16,8 +16,7 @@
     <title>React App</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <a href="/hi.html">ddd</a>
-  </body,
+    <p>hi</p>
+    <a href="/">ddd</a>
+  </body>
 </html>
