--- a/hello.html
+++ b/hello.html
@@ -18,6 +18,6 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <a href="/hi.html">ddd</a>
-  </body,
+    
+  </body>
 </html>
